Redirect to verification page after signup

--- a/Signup.html
+++ b/Signup.html
@@ -184,8 +184,8 @@
     }
 
     // Here you would normally send the signup data to your server.
-    // For now, simulate success and redirect to the main page.
-    window.location.href = "TransacSure.html";
+    // For now, simulate success and redirect to verification page.
+    window.location.href = "Submit.html";
   }
 </script>
 
