Correct case in redirect URL for signup

--- a/Signup.html
+++ b/Signup.html
@@ -185,7 +185,7 @@
 
     // Here you would normally send the signup data to your server.
     // For now, simulate success and redirect to verification page.
-    window.location.href = "Submit.html";
+    window.location.href = "submit.html";
   }
 </script>
 
