Fix link to submit page and update visitor registration

--- a/Signup.html
+++ b/Signup.html
@@ -156,6 +156,10 @@
     <div class="extra">
       Already have an account? <a href="LOG IN.html">Log in</a>
     </div>
+
+    <div class="extra" style="margin-top: 25px; padding-top: 15px; border-top: 1px solid #e0e0e0;">
+      Not a Fatima user? <a href="visitors.html">Register as a Visitor</a>
+    </div>
   </form>
 </div>
 
@@ -185,7 +189,7 @@
 
     // Here you would normally send the signup data to your server.
     // For now, simulate success and redirect to verification page.
-    window.location.href = "submit.html";
+    window.location.href = "Submit.html";
   }
 </script>
 
